# vala-xml

./: .gitignore  README.md  meson.build  valaxlm.pedromigueldev.github.json
data/: meson.build  valaxlm.pedromigueldev.github.desktop.in  valaxlm.pedromigueldev.github.gschema.xml  valaxlm.pedromigueldev.github.metainfo.xml.in
data/icons/: meson.build
meson/: post_install.py
po/: POTFILES  meson.build  pt_BR.mo  pt_BR.po  vala-xml.pot
src/: Tab.vala  application.vala  dialog.vala  meson.build  sidebar.vala  style.css  tab.vala  utils.vala  vala-xml.gresource.xml  vui.vala  window.vala
src/css/: style.css
src/ui/: dialog.ui  search.ui  sidebar.ui  tab_button.ui  window.ui
src/ui/gtk/: dialog.ui  tab_button.ui
src/widgets/: Search.vala  application.vala  config.vala.in  dialog.vala  main.vala  search.vala  sidebar.vala  tab.vala  webview.vala  window.vala
